storing keys in redis and reset password api done